mlops_week13/02_ingress_and_service_v2/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: fastapi-service
spec:
    selector:
        app: fastapi
    ports:
        - protocol: TCP
          port: 9376 ## port of service
          targetPort: 80 ## port of container that is running.
