mlops_week13/02_ingress_and_service_v2/fastapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: fastapi-ingress
spec:
    rules:
        - host: anvesh.vankayala
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: fastapi-service
                            port:
                                number: 9376
